file-k8s/client-ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-ui-deployment
  namespace: m-ecommerce
spec:
  selector:
    matchLabels:
      app: client-ui-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app: client-ui-deployment
    spec:
      containers:
        - name: client-ui-deployment
          image: asmaeel/client-ui-microservice:1.6
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
          ports:
            - containerPort: 3000
              name: client-ui-port
