file-k8s/client-ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-ui
  namespace: m-ecommerce
  labels:
    app: client-ui
spec:
  selector:
    app: client-ui
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
