file-k8s/client-ui-istio.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: client-ui
  namespace: m-ecommerce
spec:
  hosts:
    - client-ui
  http:
  - route:
    - destination:
        host: client-ui
        subset: v1
      weight: 90
    - destination:
        host: client-ui
        subset: v2
      weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: client-ui
spec:
  host: client-ui
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
